MinGW support: Add patches-win32/01-dynload_win.patch

This commit integrates changes originally added to the project
as python-cmake-buildsystem/python-cmake-buildsystem@18d49757e (Mingw32 support, and add cmake
options for disabling)

Note that in  more recent version of Python, this patch is obsoleted
by the following commits:

  See python/cpython@589f89e2a (introduced in 3.3)
      Removed a Windows 9x trick used before LoadLibraryExW.
      Windows 9x has long been unsupported and the result of GetFullPathName was not even
      being used in the first place.

  See python/cpython@05f2d84ca (introduced in 3.9)
      bpo-28269: Replace strcasecmp with system function _stricmp. (GH-13095)

Co-authored-by: David Sansome <me@davidsansome.com>